--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "11.9.5",
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
+    "@types/react-redux": "^7.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
